[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/monark logo fond transparent.png" type="Texture" id=1]
[ext_resource path="res://art/play.png" type="Texture" id=2]
[ext_resource path="res://UIControl.gd" type="Script" id=3]
[ext_resource path="res://art/stop.png" type="Texture" id=4]
[ext_resource path="res://art/Auto Stop.png" type="Texture" id=5]
[ext_resource path="res://art/Auto Cool Down.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[node name="UIControl" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 480, 40 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PlayButton" type="Button" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 612.0
margin_bottom = 606.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 1 )
icon = ExtResource( 2 )

[node name="StopButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 606.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 4 )

[node name="AutoStopButton" type="Button" parent="."]
margin_left = 500.0
margin_top = 100.0
margin_right = 1408.0
margin_bottom = 306.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 5 )

[node name="AutoCoolDownButton" type="Button" parent="."]
margin_left = 500.0
margin_top = 190.0
margin_right = 1408.0
margin_bottom = 396.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 6 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="AutoStopButton" to="." method="_on_AutoStopButton_pressed"]
[connection signal="pressed" from="AutoCoolDownButton" to="." method="_on_AutoCoolDownButton_pressed"]
